# happy_core

./: .env  .gitignore  .pylintrc  .readthedocs.yaml  AUTHORS.rst  LICENSE.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: index.md  serve.py  styles.css  template.html
docs/source/: 404.rst  api.rst  api_reference.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  migration_v0.2.0.rst  opengraph_test.rst  packages.rst  packages_references.rst  releases.rst  run_livereload.py  spelling_wordlist.txt  troubleshooting.rst  version_test.rst
docs/source/_static/: dark.css
docs/source/_static/css/: custom.css
docs/source/_static/js/: custom.js
docs/source/_templates/: footer.html  layout.html
docs/source/changelogs/: 0.1.0.rst  0.1.1.rst  0.1.2.rst  0.1.3.rst  0.2.0.rst  demo.md
docs/source/examples/collections/: 03_os_utils.rst  (+5 more)
docs/source/modules/: collections.rst  enum_registry.rst  enums_toolkits.rst  re.rst  time.rst  toolkits.rst  types.rst
docs/source/releases/: 0.1.0.rst  0.1.1.rst  0.1.2.rst  0.1.3.rst  0.2.0.rst
happy/: __init__.py  __init__.pyi  _draft.py  app.py  app.pyi  auth.py  bin.py  bin.pyi  compress.py  compression.py  compression.pyi  dec.py  deprecate.py  enums.py  enums.pyi  exceptions.py  internet_connection.py  log.py  main.py  mark.yaml  monitor.py  number.py  pass.py  pipelines.py  pipelines.pyi  protocols.py  re.py  search.py  service.py  storage.py  storage.pyi  thread.py  types.py  util.py  util.pyi  validate.py
happy_core/: __init__.py  collections.py  enum_registry.py  enums_toolkits.py  exceptions.py  time.py  toolkits.py
requirements/: build.txt  dev.txt  docs.txt  test.txt
scripts/: fix_rst_titles.py  update_version.py
tests/: README.md  test_Asyn.py  test_arithmatic_total_ordering.py  test_bin.py  test_compress.py  test_df.py  test_enum_registry.py  test_enums.py  test_env.py  test_fd.py  test_lazy.py  test_main.py  test_os.py  test_recyclebin.py  test_storage.py  test_time.py  test_toolkits.py  test_unified.py  test_utils.py
true/: __init__.py  arithmatic_total_ordering.py  asyn.py  collections.py  enum_registry.py  enums_toolkits.py  exceptions.py  re.py  time.py  toolkits.py  types.py
true/demos/asyn/: __init__.py  advanced_usage.py  asyncio_compatibility.py  basic_usage.py  distributed_tasks.py  file_operations.py  http_client.py  network_service.py  real_world_example.py  task_pipeline.py  with_without_asyn.py
true/demos/collections/: 01_basic_file_operations.py  02_directory_operations.py  03_file_creators.py  04_os_utils.py  README.md
true/demos/enum_registry/: 01_basic_usage.py  02_operations.py  03_advanced_features.py  README.md
true/demos/enums_toolkits/: 01_basic_enums.py  02_metadata_and_serialization.py  03_dynamic_enums.py  04_iterable_enums.py  05_serialization.py  README.md
true/demos/time/: 01_basic_usage.py  02_time_operations.py  03_scheduling.py  04_performance_tools.py  README.md
(+15 files in other folders)
