[tool.poetry]
name = "happy"
version = "0.1.0"
description = ""
authors = ["alaamer12 <ahmedmuhmmed239@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deprecated = ">=1.2.14,<1.3.0"
loguru = "^0.7.2"
setuptools = ">=72.1.0,<72.2.0"
faker = "^30.1.0"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
