[tool.poetry]
name = "happy"
version = "0.2.0"
description = ""
authors = ["alaamer12 <ahmedmuhmmed239@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deprecated = ">=1.2.14,<1.3.0"
loguru = "^0.7.2"
setuptools = ">=72.1.0,<72.2.0"
mozjpeg-lossless-optimization = "^1.1.3"
pillow = "^10.4.0"
pillow-avif-plugin = "^1.4.6"
moviepy = "^1.0.3"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"
authlib = "^1.3.2"
pikepdf = "~9.3.0"
EbookLib = "~0.18"
uuid-utils = "^0.9.0"
python-ulid = "^3.0.0"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"
faker = "^30.1.0"
commitizen = "^3.29.1"
pytest = "^8.3.3"
coverage = "^7.6.1"
pytest-mock = "^3.14.0"
freezegun = "^1.5.1"
pdoc = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
uuid = ["some-uuid-library"]
all = ["some-uuid-library", "another-library"]