[tool.poetry]
name = "happy_core"
version = "0.1.0"
description = "A boilerplate utility package"
authors = ["alaamer12 <ahmedmuhmmed239@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = ">=6.0.0,<6.1.0"
moviepy = ">=1.0.3,<1.1.0"
pydub = ">=0.25.1,<0.26.0"
pillow = ">=9.5.0,<9.6.0"
colorama = ">=0.4.6,<0.5.0"
pytz = ">=2022.7.1,<2022.8.0"
psutil = ">=6.1.0,<6.2.0"
uuid-utils = ">=0.9.0,<0.10.0"
poetry = "^1.8.4"

[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"
pytest = ">=8.3.3,<8.4.0"
pytest-asyncio = "^0.24.0"
setuptools = ">=75.3.0,<75.4.0"

[build-system]
requires = ["poetry-core >=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
ulid = ["uuid_utils"]
jorunal = ["pandas"]