[metadata]
name = happy
description = Add a short description here!
author = alaamer12
author_email = ahmedmuhmmed239@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/alaamer12
project_urls =
    Source = https://github.com/alaamer12/happy

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

python_requires = >=3.6

testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov happy --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests